<resources>
    <string name="zxing_msg_default_status" translatable="false"></string>
    <string name="app_name">Pancake</string>
    <string name="fatal_error">Fatal error:</string>
    <string name="failed_to_acquire_permissions_will_not_launch">Failed to acquire permissions, will not launch</string>
    <string name="ok">Ok</string>
    <string name="screen_in_development">Экран в разработке</string>
    <string name="food">🍏 Продукты</string>
    <string name="household_goods">🪥 Бытовые товары</string>
    <string name="clothes">👕 Одежда</string>
    <string name="home_goods">🏠 Для дома</string>
    <string name="tech_goods">💻 Техника</string>
    <string name="other_products">🎲 Другое</string>
    <string name="low_importance">🥱 Низкая важность</string>
    <string name="mid_importance">😱 Важно</string>
    <string name="high_importance">🤬 Очень важно</string>
    <string name="dialog_add_task_title">Добавить задачу</string>
    <string name="dialog_edit_task_title">Редактировать задачу</string>
    <string name="dialog_add_item_title">Добавить товар</string>
    <string name="dialog_add_note_title">Добавить заметку</string>
    <string name="dialog_edit_note_title">Редактировать заметку</string>
    <string name="dialog_edit_season_episode_title">Редактировать сезон и серию</string>
    <string name="dialog_choose_action_title">Выберите действие</string>
    <string name="dialog_add_action">Добавить</string>
    <string name="dialog_save_action">Сохранить</string>
    <string name="dialog_cancel_action">Отмена</string>
    <string name="next_action">Далее</string>
    <string name="task_completed">Задача выполнена</string>
    <string name="task_reopen">Переоткрыть задачу</string>
    <string name="create_reminder">Создать напоминание</string>
    <string name="edit_task">Редактировать задачу</string>
    <string name="delete_action">Удалить</string>
    <string name="movie_status_watching">Смотрю</string>
    <string name="movie_status_planned">Буду смотреть</string>
    <string name="movie_status_watched">Просмотрено</string>
    <string name="movie_season_episode_format">Сезон %1$d, Серия %2$d</string>
    <string name="movies">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="movie_type_movie">🎥 Фильм</string>
    <string name="movie_type_series">📺 Сериал</string>
    <string name="season_label">Сезон:</string>
    <string name="episode_label">Серия:</string>
    <string name="not_started">N/A</string>
    <string name="add_movie_title">Добавить фильм/сериал</string>
    <string name="search_movies">Поиск фильма</string>
    <string name="search_watched_movies">Поиск по просмотренным</string>
    <string name="search_notes">Поиск заметок</string>
    <string name="notes">Заметки</string>
    <string name="notes_title">Заголовок</string>
    <string name="notes_sub_title">Подзаголовок</string>
    <string name="notes_desc">Напишите заметку</string>
    <string name="web_url">Введите веб-адрес</string>
    <string name="cancel">Отмена</string>
    <string name="add_image">Добавить изображение</string>
    <string name="add_web_link">Добавить веб-ссылку</string>
    <string name="pick_color">Выберите цвет</string>
    <string name="delete_note">Удалить</string>
    <string name="duplicate_note">Дублировать</string>
    <string name="pin_note">Закрепить</string>
    <string name="unpin_note">Открепить</string>
    <string name="selected_count_format">Выбрано: %1$d</string>
    <string name="notes_section_pinned">Закрепленные</string>
    <string name="notes_section_other">Другие</string>
    <string name="error_note_title_required">Ввод заголовка является обязательным</string>
    <string name="error_note_subtitle_required">Ввод подзаголовка является обязательным</string>
    <string name="error_note_desc_required">Ввод описания является обязательным</string>
    <string name="error_web_link_required">Ввод URL - адреса является обязательным</string>
    <string name="error_web_link_invalid">URL - адрес недопустим</string>
    <string name="add_custom_movie">Добавить свой фильм</string>
    <string name="dialog_add_custom_movie_title">Выбор</string>
    <string name="choose_movie_status">%1$s - статус</string>
    <string name="set_season_episode">Указать сезон/серию</string>
    <string name="mark_as_watched">Отметить как просмотренное</string>
    <string name="search">Поиск</string>
    <string name="show_action">Показать</string>
    <string name="movie_already_added_title">Фильм уже добавлен</string>
    <string name="movie_already_added_message">"%1$s" уже в списке "%2$s"</string>
    <string name="select_movie_type_title">Выберите тип для "%1$s"</string>
    <string name="unknown_value">Unknown</string>
    <string name="error_enter_season">Введите номер сезона</string>
    <string name="error_enter_episode">Введите номер серии</string>
    <string name="error_required_name">Введите название</string>
    <string name="recurrence_never">Никогда</string>
    <string name="recurrence_daily">Каждый день</string>
    <string name="recurrence_weekly">Каждую неделю</string>
    <string name="recurrence_monthly">Каждый месяц</string>
    <string name="recurrence_yearly">Каждый год</string>
    <string name="hint_importance">Важность</string>
    <string name="hint_recurrence">Повторение</string>
    <string name="hint_task_name">Название задачи</string>
    <string name="hint_item_name">Название товара</string>
    <string name="hint_item_count">Количество</string>
    <string name="hint_item_type">Тип товара</string>
    <string name="hint_movie_name">Название фильма</string>
    <string name="note_title_hint">Название заметки</string>
    <string name="note_subtitle_hint">Подзаголовок</string>
    <string name="note_text_hint">Текст заметки</string>
    <string name="hint_type">Тип</string>
    <string name="hint_season">Сезон</string>
    <string name="hint_episode">Серия</string>
    <string name="select_date">Выбрать дату</string>
    <string name="select_time">Выбрать время</string>
    <string name="selected_date_format">Дата: %1$s</string>
    <string name="selected_time_format">Время: %1$s</string>
    <string name="no_time">Без времени</string>
    <string name="overdue">Просрочено</string>
    <string name="time_left_label">Осталось</string>
    <string name="remaining_label">Осталось:</string>
    <string name="importance_label">Важность:</string>
    <string name="recurrence_label">Повторение:</string>
    <string name="deadline_label">Крайний срок:</string>
    <string name="no_time_tasks">Без времени</string>
    <string name="completed_tasks">Выполненные задачи</string>
    <string name="to_buy_items">К покупке</string>
    <string name="added_items">Уже добавлено</string>
    <string name="calendar">Календарь</string>
    <string name="sort">Сортировать</string>
    <string name="edit">Изменить</string>
    <string name="save_action">Сохранить</string>
    <string name="edit_action">Изменить</string>
    <string name="sort_action">Сортировать</string>
    <string name="sort_by_color">Сортировать по цвету</string>
    <string name="sort_by_custom">Свой вариант</string>
    <string name="sort_by_updated">По дате изменения</string>
    <string name="sort_by_created">По дате создания</string>
    <string name="delete_all_action">Удалить все</string>
    <string name="delete_bought_action">Удалить купленное</string>
    <string name="delete_completed_action">Удалить выполненные</string>
    <string name="confirm_delete_bought_title">Удалить купленное?</string>
    <string name="confirm_delete_bought_message">Все товары из категории «Добавлено» будут удалены без возможности восстановления.</string>
    <string name="confirm_delete_completed_title">Удалить выполненные?</string>
    <string name="confirm_delete_completed_message">Все выполненные задачи будут удалены без возможности восстановления.</string>
    <string name="calendar_not_installed">Google Календарь не установлен</string>
    <string name="date_label">Дата</string>
    <string name="day_of_week_label">День недели</string>
    <string name="add_task">Добавить задачу</string>
    <string name="add_item">Добавить товар</string>
    <string name="add_note">Добавить заметку</string>
    <string name="created_by_label">Создано</string>
    <string name="time_label">Время</string>
    <string name="created_by_time_format">%1$s • %2$s</string>
    <string name="editor_updated_by_time_format">%2$s • %1$s</string>
    <string name="note_media_action">Медиа</string>
    <string name="note_markdown_preview_action">Просмотр Markdown</string>
    <string name="note_markdown_edit_action">Редактирование Markdown</string>
    <string name="note_more_action">Дополнительно</string>
    <string name="note_take_photo_action">Сделать снимок</string>
    <string name="note_pick_image_action">Добавить изображение</string>
    <string name="note_choose_media_source_title">Добавить</string>
    <string name="note_markdown_image_alt">Изображение</string>
    <string name="note_add_link_action">Добавить ссылку</string>
    <string name="note_add_heading_action">Добавить заголовок</string>
    <string name="note_add_subheading_action">Добавить подзаголовок</string>
    <string name="note_add_ordered_list_action">Добавить список</string>
    <string name="note_add_bullet_list_action">Добавить пункты</string>
    <string name="note_add_inline_quote_action">Короткая цитата</string>
    <string name="note_add_block_quote_action">Длинная цитата</string>
    <string name="note_add_code_action">Добавить код</string>
    <string name="note_quote_copied">Цитата скопирована</string>
    <string name="login_with_google">Войти через Google</string>
    <string name="login_with_email">Войти через почту</string>
    <string name="email_invalid">Email адрес невалидный</string>
    <string name="password_too_short">Пароль должен быть минимум 6 символов</string>
    <string name="email_already_in_use">Этот email уже зарегистрирован</string>
    <string name="wrong_password">Неправильный пароль</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="auth_error">Ошибка при входе. Попробуйте еще раз</string>
    <string name="space_entry_title">Выберите действие</string>
    <string name="space_create">Создать</string>
    <string name="space_join">Присоединиться</string>
    <string name="space_code_hint">Введите код пространства</string>
    <string name="space_code_invalid">Некорректный код пространства</string>
    <string name="space_share_title">Пространство команды</string>
    <string name="space_share_subtitle">Передайте QR или код участнику команды</string>
    <string name="space_code_label">Код пространства</string>
    <string name="space_code_copy">Скопировать код</string>
    <string name="space_code_copied">Код пространства скопирован</string>
    <string name="space_join_title">Присоединиться к пространству</string>
    <string name="space_join_apply">Присоединиться</string>
    <string name="camera_permission_required">Для сканирования нужен доступ к камере</string>
    <string name="google_sign_in_failed">Не удалось войти через Google. Попробуйте позже или используйте другой способ входа.</string>
    <string name="note_image_actions">Действия с изображением</string>
    <string name="note_save_image_action">Сохранить</string>
    <string name="note_share_image_action">Отправить</string>
    <string name="confirm_delete_note_title">Удалить заметку?</string>
    <string name="confirm_delete_note_message">Заметка будет удалена без возможности восстановления.</string>
    <string name="delete_note_full">Удалить заметку</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_go_back">Вернуться</string>
</resources>