<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Pancake.DialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWatching"
        style="@style/Widget.Pancake.Button.DialogAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_status_watching"
        app:icon="@drawable/ic_status_watching"
        app:iconGravity="textStart"
        app:iconPadding="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlanned"
        style="@style/Widget.Pancake.Button.DialogAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/movie_status_planned"
        app:icon="@drawable/ic_status_planned"
        app:iconGravity="textStart"
        app:iconPadding="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWatched"
        style="@style/Widget.Pancake.Button.Positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/movie_status_watched"
        app:icon="@drawable/ic_status_watched"
        app:iconGravity="textStart"
        app:iconPadding="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/Widget.Pancake.Button.Negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/dialog_cancel_action" />

</LinearLayout>

